--- a/website/docs/intro.mdx
+++ b/website/docs/intro.mdx
@@ -14,11 +14,9 @@ O JS SDK pode ser usado em qualquer aplicação JavaScript e TypeScript. Porém,
 utilizar o Starlight React SDK, que provê componentes React que facilitam a integração com o Starlight, além de todas
 as funcionalidades do JS SDK.
 
-:::info Versão da API
-
-O JS SDK requisita e envia dados para o Starlight utilizando a versão 2 das APIs.
-
-:::
+Além desse guia, você também pode verificar a referência de todos os objetos e métodos do SDK [na seção API](/api).
+Você pode sempre acessar a seção API no menu do topo desse site, ou no menu de hambúrguer em dispositivos mobile. Além
+disso, várias páginas desse guia contém links para visualizar páginas da API relacionadas ao conteúdo.
 
 ## Instalação
 
