--- a/website/docs/requests-and-responses.mdx
+++ b/website/docs/requests-and-responses.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_position: 1
+sidebar_position: 3
 toc_max_heading_level: 4
 ---
 
@@ -7,7 +7,7 @@ toc_max_heading_level: 4
 
 O JS SDK segue alguns padrões para facilitar seu uso:
 - Requisições são feitas utilizando Selectors ou Instances
-- Respostas seguem um padrão onde o(s) dado(s) requisitado(s) é retornado no parâmetro `data`
+- Respostas seguem um padrão onde o dado requisitado é retornado no parâmetro `data`
 - Todos os métodos de requisição retornam Promises.
 
 Para saber mais sobre os dois primeiros padrões, continue lendo essa página. Porém, para entender as Promises retornadas
