Fix broken links

--- a/website/docs/client.mdx
+++ b/website/docs/client.mdx
@@ -180,5 +180,5 @@ const entry = await requestEntry('hello-world')
 
 O StarlightError é um objeto com um parâmetro `response`, que é a resposta retornada pelo método `fetch` do navegador
 (ou do Node, caso você faça a requisição do lado do servidor). Para mais informações sobre esse erro, dê uma olhada
-[nessa página do guia sobre respostas](./requesting-data/requests-and-responses#starlight-error) e
+[nessa página do guia sobre respostas](./requests-and-responses#starlight-error) e
 [nessa página da API que detalha o StarlightError](/api/class/StarlightError).
