--- a/website/docs/requesting-data/collections.mdx
+++ b/website/docs/requesting-data/collections.mdx
@@ -49,7 +49,7 @@ CollectionInstances são utilizados para requisitar informações e itens de uma
 
 Existem duas maneiras de utilizar CollectionInstances: utilizando
 [o método `collection()` de um StarlightClient](/api/interface/StarlightClient#collection) ou utilizando a
-[sintaxe dinâmica](./requests-and-responses#dynamic-syntax) da
+[sintaxe dinâmica](../requests-and-responses#dynamic-syntax) da
 [propriedade `collections` de um StarlightClient](/api/interface/StarlightClient#collections). Por exemplo, você pode
 criar um CollectionInstance para uma coleção de slug `events` dessas duas maneiras:
 
