--- a/website/docs/requesting-data/models-entries-and-categories.mdx
+++ b/website/docs/requesting-data/models-entries-and-categories.mdx
@@ -46,7 +46,7 @@ ModelInstances são utilizados para requisitar dados de um *modelo* específico,
 
 Existem duas maneiras de utilizar ModelInstances: utilizando
 [o método `model()` de um StarlightClient](/api/interface/StarlightClient#model) ou utilizando a
-[sintaxe dinâmica](./requests-and-responses#dynamic-syntax) de um cliente do SDK. Por exemplo, você pode requisitar
+[sintaxe dinâmica](../requests-and-responses#dynamic-syntax) de um cliente do SDK. Por exemplo, você pode requisitar
 os dados de um modelo de *slug* `posts` dessas duas maneiras:
 
 ```js
