--- a/website/docs/requests-and-responses.mdx
+++ b/website/docs/requests-and-responses.mdx
@@ -11,7 +11,7 @@ O JS SDK segue alguns padrões para facilitar seu uso:
 - Todos os métodos de requisição retornam Promises.
 
 Para saber mais sobre os dois primeiros padrões, continue lendo essa página. Porém, para entender as Promises retornadas
-pelas requisições, você pode dar uma olhada na [página sobre clientes do SDK](../client#requisições-retornam-promises).
+pelas requisições, você pode dar uma olhada na [página sobre clientes do SDK](./client#requests-return-promises).
 
 Você pode pular essas definições se quiser, já que elas explicam conceitos que acontecem "por baixo dos panos".
 Porém, entender esses conceitos pode lhe ajudar bastante a entender a estruturação do SDK. Se você já usou o SDK mas
@@ -189,7 +189,7 @@ de criar Instances é mais natural, já que estamos apenas chamando um método d
 
 ## Respostas {#responses}
 
-Como explicamos anteriormente, [todos os métodos que requisitam dados do Starlight retornam Promises](./client#requisições-retornam-promises).
+Como explicamos anteriormente, [todos os métodos que requisitam dados do Starlight retornam Promises](./client#requests-return-promises).
 Ao retornarem, essas Promises contém um desses três tipos:
 
 - [StarlightItemResponse](#starlight-item-response)
