Add React SDK links to the docs

--- a/website/docs/intro.mdx
+++ b/website/docs/intro.mdx
@@ -11,8 +11,8 @@ Nesse guia, aprenderemos a utilizar o JS SDK do Starlight, uma ferramenta oficia
 de integração de sites e aplicações JavaScript com as APIs do Starlight.
 
 O JS SDK pode ser usado em qualquer aplicação JavaScript e TypeScript. Porém, se sua aplicação usa React, você pode
-utilizar o Starlight React SDK, que provê componentes React que facilitam a integração com o Starlight, além de todas
-as funcionalidades do JS SDK.
+utilizar o [Starlight React SDK](https://react.sdk.starlight.sh/docs/intro), que provê componentes React que facilitam
+a integração com o Starlight, além de todas as funcionalidades do JS SDK.
 
 Além desse guia, você também pode verificar a referência de todos os objetos e métodos do SDK [na seção API](/api).
 Você pode sempre acessar a seção API no menu do topo desse site, ou no menu de hambúrguer em dispositivos mobile. Além
